--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -53,7 +53,7 @@
 
     {% for entry in site.data.contact %}
       {% case entry.type %}
-        {% when 'github', 'twitter' %}
+        {% when 'github' %}
           {%- capture url -%}
             https://{{ entry.type }}.com/{{ site[entry.type].username }}
           {%- endcapture -%}
@@ -62,16 +62,12 @@
           {%- capture url -%}
             javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
           {%- endcapture -%}
-        {% when 'rss' %}
-          {% assign url = '/feed.xml' | relative_url %}
         {% else %}
-          {% assign url = entry.url %}
+          {% continue %}
       {% endcase %}
-
+      
       {% if url %}
-        <a
-          href="{{ url }}"
-          aria-label="{{ entry.type }}"
+        <a href="{{ url }}" aria-label="{{ entry.type }}"
           {% assign link_types = '' %}
 
           {% unless entry.noblank %}
